# sagalite

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  pay.cpp
include/sagalite/manager/: Define.h  IMonitor.h  IStorage.h  ITransaction.h  ITransactionFactory.h  SagaDefinition.h  SagaManager.h
include/sagalite/monitor/: MonitorFactory.h
include/sagalite/persistence/: StorageFactory.h
include/sagalite/transaction/: TransactionFactory.h
include/sagalite/utility/: Logger.h
src/manager/: SagaDefinition.cpp  SagaManager.cpp
src/monitor/: HttpMonitor.cpp  HttpMonitor.h  MonitorFactory.cpp
src/persistence/: FileStorage.cpp  FileStorage.h  StorageFactory.cpp
src/transaction/: Transaction.cpp  Transaction.h  TransactionFactory.cpp
